# athena-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
athena/: __init__.py
athena/agents/: base.py  learning_coach.py
athena/api/: main.py
athena/api/routes/: chat.py
athena/config/: settings.py
athena/core/: intent_classifier.py  orchestrator.py  semantic_router.py  state.py
athena/tools/: mcp_client.py
docker/: Dockerfile  docker-compose.yml
scripts/: deploy.sh
